html and contrast fix

--- a/08/css/styles.css
+++ b/08/css/styles.css
@@ -354,7 +354,7 @@ header h2 {
   font-size: 1.2rem;
   font-weight: 400;
   padding-left: 0.7rem;
-  color: #0097dc;
+  color: #0070a4;
   text-decoration: none;
   margin: 0;
 }
@@ -422,13 +422,13 @@ nav ul li {
   text-align: center;
   display: block;
   border-bottom: solid 1px rgba(255, 255, 255, 0.5);
-  color: #0097dc;
+  color: #0070a4;
 }
 nav ul li a {
   display: block;
   padding: 1rem 2vw;
   font-weight: 400;
-  color: #0097dc;
+  color: #0070a4;
   text-decoration: none;
   text-align: center;
   background-color: #ffffff;
@@ -459,7 +459,7 @@ main h3 {
   font-weight: 300;
 }
 main h2 {
-  color: #0097dc;
+  color: #0070a4;
 }
 
 .hero {
@@ -604,7 +604,7 @@ footer {
     width: auto;
   }
   nav ul li a {
-    color: #0097dc;
+    color: #0070a4;
     background-color: transparent;
     font-weight: 600;
     padding: 0.2rem 1rem;
@@ -616,7 +616,7 @@ footer {
     color: #032064;
   }
   nav ul li a:hover {
-    background-color: rgba(0, 151, 220, 0.2);
+    background-color: rgba(0, 112, 164, 0.2);
     color: #000000;
     padding-left: 1rem;
     padding-right: 1rem;
